[tool.poetry]
name = "aes.py"
version = "0.1.0"
description = "AES-128 in pure Python"
authors = ["Kelby Ludwig <kelbyludwig@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mypy = "^0.770"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
